--- a/website/index.html
+++ b/website/index.html
@@ -15,28 +15,13 @@
 <body>
     <section class="loading"></section>
     <section class="hero">
-        <div class="logo">MekaVerse</div>
+        <div class="logo">TP BlockChain</div>
         <div class="socials">
-            <ul>
-                <li>
-                    <a href="#" target="_blank">
-                        <i class="fab fa-discord"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" target="_blank">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                </li>
-            </ul>
         </div>
         <div class="heroG">
             <div>
-                <h1>Welcome on <span class="red">MekaVerse</span></h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique doloremque vel laboriosam optio sunt eveniet illum, atque consequuntur quos omnis perferendis. Animi ex eveniet atque, ut enim nobis excepturi minus!</p>
-                <a href="#">
-                    <button class="btn">See on OpenSea</button>
-                </a>
+                <h1>Bienvenue sur le<span class="red">TP BlockChain</span></h1>
+                <p>Ce TP a été réalisé par Lucas BERREHIL EL KATTEL</p>
                 <a href="http://localhost:3000/">
                     <button class="btn">MINT ONE PRETTY DOG</button>
                 </a>
@@ -46,53 +31,13 @@
 
         </div>
     </section>
-    <section class="discord">
-        <div class="container">
-            <h2 data-aos="zoom-in">Join <span class="red">our Discord</span></h2>
-            <a href="#" data-aos="zoom-in-up"><button class="btn">Go !</button></a>
-        </div>
-    </section>
-    <div class="roadmap">
-        <div class="container">
-            <h2 data-aos="zoom-in">The <span class="red">Roadmap</span></h2>
-            <div class="line"></div>
-            <div class="bloc" data-aos="zoom-in">
-                <div class="number">1</div>
-                <h4>Launch Roadmap</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum a repellendus nemo minus alias officia culpa ab. Eveniet esse repudiandae quisquam, necessitatibus iure, voluptatum ullam reiciendis molestias commodi, minima nemo.</p>
-            </div>
-            <div class="bloc" data-aos="zoom-in">
-                <div class="number off">2</div>
-                <h4>Launch Presale</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum a repellendus nemo minus alias officia culpa ab. Eveniet esse repudiandae quisquam, necessitatibus iure, voluptatum ullam reiciendis molestias commodi, minima nemo.</p>
-            </div>
-            <div class="bloc" data-aos="zoom-in">
-                <div class="number off">3</div>
-                <h4>Mint the remaining NFTs on OpenSea</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum a repellendus nemo minus alias officia culpa ab. Eveniet esse repudiandae quisquam, necessitatibus iure, voluptatum ullam reiciendis molestias commodi, minima nemo.</p>
-            </div>
-            <div class="bloc" data-aos="zoom-in">
-                <div class="number off">4</div>
-                <h4>Mint the remaining NFTs on OpenSea</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum a repellendus nemo minus alias officia culpa ab. Eveniet esse repudiandae quisquam, necessitatibus iure, voluptatum ullam reiciendis molestias commodi, minima nemo.</p>
-            </div>
-        </div>
-    </div>
     <div class="team">
         <div class="container">
             <h2 data-aos="zoom-in">The <span class="red">Team</span></h2>
             <div class="team__flex">
                 <div class="member" data-aos="zoom-in">
-                    <h4>Ben / <span class="job">Blockchain Developper</span></h4>
-                    <img src="img/mekas/5.png" alt="Ben" />
-                </div>
-                <div class="member" data-aos="zoom-in">
-                    <h4>Marc / <span class="job">Designer</span></h4>
-                    <img src="img/mekas/6.png" alt="Marc" />
-                </div>
-                <div class="member" data-aos="zoom-in">
-                    <h4>Matt / <span class="job">Marketer</span></h4>
-                    <img src="img/mekas/7.png" alt="Matt" />
+                    <h4>Lucas BERREHIL / <span class="job">ING5 OCRES TD02</span></h4>
+                    <img src="img/LB.jpg" alt="Ben" />
                 </div>
             </div>
         </div>
@@ -100,14 +45,7 @@
     <footer>
         <div class="container">
             <div class="footer__flex">
-                <div class="footerG">
-                    MekaVerse
-                </div>
                 <div class="footerD">
-                    <ul>
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                    </ul>
                 </div>
             </div>
         </div>
